// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<h2
  class="Subheading"
  data-test-id="cf-ui-subheading"
>
  Subheading
</h2>
`;

exports[`renders the component h3 1`] = `
<h3
  class="Subheading"
  data-test-id="cf-ui-subheading"
>
  Subheading
</h3>
`;

exports[`renders the component with an additional class name 1`] = `
<h2
  class="Subheading my-extra-class"
  data-test-id="cf-ui-subheading"
>
  Subheading
</h2>
`;
